-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u192
-
Component/s: hotspot
-
b01
-
ppc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8230979 | openjdk8u222 | Unassigned | P2 | Resolved | Fixed | b01 |
For a while we see jck jdwp tests aborting with guarantee(codelet_size > 0 && (size_t)codelet_size > 2*K) failed: not enough space for interpreter generation
VM Arguments:
jvm_args: -Djava.awt.headless=true -Xms128m -Xmx288m -XX:MaxJavaStackTraceDepth=1024 -Xverify:all -XX:+FailOverToOldVerifier -Xverify:all -agentlib:jdwp=server=y,transport=dt_socket,address=6660,suspend=n -Djdk.xml.maxXMLNameLimit=4000 -Djava.net.preferIPv4Stack=true -Djava.security.auth.policy=/.../jck/jck8b/JCK-runtime-8b/lib/jck.auth.policy -Djava.security.auth.login.config=/.../jck/jck8b/JCK-runtime-8b/lib/jck.auth.login.config -Djava.security.policy=/.../jck/jck8b/JCK-runtime-8b/lib/jck.policy -Djava.io.tmpdir=/..../jck_jdwp_only_work/tempdir -Djavatest.security.allowPropertiesAccess=true -Djava.util.prefs.userRoot=/.../jck_jdwp_only_work/tempdir -Djava.ext.dirs=/.../jck/jck8b/JCK-runtime-8b/lib/extensions:/.../jre/lib/ext -Djava.rmi.activation.port=6260
java_command: com.sun.javatest.agent.AgentMain -active -activeHost localhost -activePort 6560
VM Arguments:
jvm_args: -Djava.awt.headless=true -Xms128m -Xmx288m -XX:MaxJavaStackTraceDepth=1024 -Xverify:all -XX:+FailOverToOldVerifier -Xverify:all -agentlib:jdwp=server=y,transport=dt_socket,address=6660,suspend=n -Djdk.xml.maxXMLNameLimit=4000 -Djava.net.preferIPv4Stack=true -Djava.security.auth.policy=/.../jck/jck8b/JCK-runtime-8b/lib/jck.auth.policy -Djava.security.auth.login.config=/.../jck/jck8b/JCK-runtime-8b/lib/jck.auth.login.config -Djava.security.policy=/.../jck/jck8b/JCK-runtime-8b/lib/jck.policy -Djava.io.tmpdir=/..../jck_jdwp_only_work/tempdir -Djavatest.security.allowPropertiesAccess=true -Djava.util.prefs.userRoot=/.../jck_jdwp_only_work/tempdir -Djava.ext.dirs=/.../jck/jck8b/JCK-runtime-8b/lib/extensions:/.../jre/lib/ext -Djava.rmi.activation.port=6260
java_command: com.sun.javatest.agent.AgentMain -active -activeHost localhost -activePort 6560
- backported by
-
JDK-8230979 [ppc64] Increase code size for interpreter generation.
-
- Resolved
-