8219961: [ppc64] Increase code size for interpreter generation. Reviewed-by: aph, mdoerr